[package]
name = "echo"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.4"
tokio = { version = "0.2.17", features = ["full"] }
failure = "0.1.7"
reqwest = "0.10.4" 
